--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@tinymce/tinymce-react": "^3.5.0",
+    "axios": "^0.19.2",
+    "draft-js": "^0.11.5",
+    "jodit-react": "^1.0.42",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-draft-wysiwyg": "^1.14.5",
+    "react-file-base64": "^1.0.3",
+    "react-quill": "^1.3.5",
+    "react-scripts": "3.4.1",
+    "suneditor-react": "^2.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
